# classrooms

./: .gitignore  README.md  json.json  main.py  pyproject.toml  roadmap.md  util.py
repltalk/: __init__.py  graphql.py  queries.py
static/: add_people.js  assignment.css  assignment.js  classroom.css  drag.js  form.css  landing.css  languages.json  login.css  make_assignment.js  make_class.js  modal_answer.js  remove_people.js  repl_url.js  style.css
templates/: add_people.html  assignment.html  base.html  classroom.html  classroom_base.html  create_assignment.html  create_class.html  landing.html  login.html  teacher_assignments_list.html  teachers.html
