[tool.poetry]
name = "classrooms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
cloudinary = "^1.24.0"
requests = "^2.25.1"
dnspython = "^2.1.0"
pymongo = "^3.11.3"
repltalk = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
